@@ -1469,6 +1469,10 @@ DECL|field|rootMetrics
 name|FSQueueMetrics
 name|rootMetrics
 decl_stmt|;
+DECL|field|fsOpDurations
+name|FSOpDurations
+name|fsOpDurations
+decl_stmt|;
 comment|// Time when we last updated preemption vars
 DECL|field|lastPreemptionUpdateTime
 specifier|protected
@@ -1886,11 +1890,38 @@ argument_list|(
 name|updateInterval
 argument_list|)
 expr_stmt|;
+name|long
+name|start
+init|=
+name|getClock
+argument_list|()
+operator|.
+name|getTime
+argument_list|()
+decl_stmt|;
 name|update
 argument_list|()
 expr_stmt|;
 name|preemptTasksIfNecessary
 argument_list|()
+expr_stmt|;
+name|long
+name|duration
+init|=
+name|getClock
+argument_list|()
+operator|.
+name|getTime
+argument_list|()
+operator|-
+name|start
+decl_stmt|;
+name|fsOpDurations
+operator|.
+name|addUpdateThreadRunDuration
+argument_list|(
+name|duration
+argument_list|)
 expr_stmt|;
 block|}
 catch|catch
@@ -1997,6 +2028,15 @@ name|void
 name|update
 parameter_list|()
 block|{
+name|long
+name|start
+init|=
+name|getClock
+argument_list|()
+operator|.
+name|getTime
+argument_list|()
+decl_stmt|;
 name|updatePreemptionVariables
 argument_list|()
 expr_stmt|;
@@ -2091,6 +2131,24 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+name|long
+name|duration
+init|=
+name|getClock
+argument_list|()
+operator|.
+name|getTime
+argument_list|()
+operator|-
+name|start
+decl_stmt|;
+name|fsOpDurations
+operator|.
+name|addUpdateCallDuration
+argument_list|(
+name|duration
+argument_list|)
+expr_stmt|;
 block|}
 comment|/**    * Update the preemption fields for all QueueScheduables, i.e. the times since    * each queue last was at its guaranteed share and at> 1/2 of its fair share    * for each type of task.    */
 DECL|method|updatePreemptionVariables ()
@@ -2102,7 +2160,8 @@ block|{
 name|long
 name|now
 init|=
-name|clock
+name|getClock
+argument_list|()
 operator|.
 name|getTime
 argument_list|()
@@ -2283,7 +2342,8 @@ block|}
 name|long
 name|curTime
 init|=
-name|clock
+name|getClock
+argument_list|()
 operator|.
 name|getTime
 argument_list|()
@@ -2378,6 +2438,15 @@ name|Resource
 name|toPreempt
 parameter_list|)
 block|{
+name|long
+name|start
+init|=
+name|getClock
+argument_list|()
+operator|.
+name|getTime
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
 name|Resources
@@ -2639,6 +2708,24 @@ expr_stmt|;
 block|}
 block|}
 block|}
+name|long
+name|duration
+init|=
+name|getClock
+argument_list|()
+operator|.
+name|getTime
+argument_list|()
+operator|-
+name|start
+decl_stmt|;
+name|fsOpDurations
+operator|.
+name|addPreemptCallDuration
+argument_list|(
+name|duration
+argument_list|)
+expr_stmt|;
 block|}
 DECL|method|warnOrKillContainer (RMContainer container)
 specifier|protected
@@ -2730,7 +2817,8 @@ name|time
 operator|+
 name|waitTimeBeforeKill
 operator|<
-name|clock
+name|getClock
+argument_list|()
 operator|.
 name|getTime
 argument_list|()
@@ -2782,7 +2870,8 @@ operator|+
 literal|" (after waiting for premption for "
 operator|+
 operator|(
-name|clock
+name|getClock
+argument_list|()
 operator|.
 name|getTime
 argument_list|()
@@ -2804,7 +2893,8 @@ name|addPreemption
 argument_list|(
 name|container
 argument_list|,
-name|clock
+name|getClock
+argument_list|()
 operator|.
 name|getTime
 argument_list|()
@@ -5114,6 +5204,15 @@ name|RMNode
 name|nm
 parameter_list|)
 block|{
+name|long
+name|start
+init|=
+name|getClock
+argument_list|()
+operator|.
+name|getTime
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
 name|LOG
@@ -5329,6 +5428,24 @@ name|node
 argument_list|)
 expr_stmt|;
 block|}
+name|long
+name|duration
+init|=
+name|getClock
+argument_list|()
+operator|.
+name|getTime
+argument_list|()
+operator|-
+name|start
+decl_stmt|;
+name|fsOpDurations
+operator|.
+name|addNodeUpdateDuration
+argument_list|(
+name|duration
+argument_list|)
+expr_stmt|;
 block|}
 DECL|method|continuousSchedulingAttempt ()
 name|void
@@ -5337,6 +5454,15 @@ parameter_list|()
 throws|throws
 name|InterruptedException
 block|{
+name|long
+name|start
+init|=
+name|getClock
+argument_list|()
+operator|.
+name|getTime
+argument_list|()
+decl_stmt|;
 name|List
 argument_list|<
 name|NodeId
@@ -5445,6 +5571,24 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+name|long
+name|duration
+init|=
+name|getClock
+argument_list|()
+operator|.
+name|getTime
+argument_list|()
+operator|-
+name|start
+decl_stmt|;
+name|fsOpDurations
+operator|.
+name|addContinuousSchedulingRunDuration
+argument_list|(
+name|duration
+argument_list|)
+expr_stmt|;
 block|}
 comment|/** Sort nodes by available resource */
 DECL|class|NodeAvailableResourceComparator
@@ -6554,6 +6698,15 @@ argument_list|,
 literal|true
 argument_list|,
 name|conf
+argument_list|)
+expr_stmt|;
+name|fsOpDurations
+operator|=
+name|FSOpDurations
+operator|.
+name|getInstance
+argument_list|(
+literal|true
 argument_list|)
 expr_stmt|;
 comment|// This stores per-application scheduling information
