@@ -25,6 +25,22 @@ package|;
 end_package
 
 begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|metrics2
+operator|.
+name|impl
+operator|.
+name|MetricsCollectorImpl
+import|;
+end_import
+
+begin_import
 import|import static
 name|org
 operator|.
@@ -23173,6 +23189,60 @@ argument_list|,
 literal|0
 argument_list|,
 name|numRetries
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testPerfMetricsInited ()
+specifier|public
+name|void
+name|testPerfMetricsInited
+parameter_list|()
+block|{
+name|scheduler
+operator|.
+name|init
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
+name|scheduler
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|MetricsCollectorImpl
+name|collector
+init|=
+operator|new
+name|MetricsCollectorImpl
+argument_list|()
+decl_stmt|;
+name|scheduler
+operator|.
+name|fsOpDurations
+operator|.
+name|getMetrics
+argument_list|(
+name|collector
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Incorrect number of perf metrics"
+argument_list|,
+literal|1
+argument_list|,
+name|collector
+operator|.
+name|getRecords
+argument_list|()
+operator|.
+name|size
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
